  StandardPBEBigIntegerEncryptor and StandardPBEBigDecimalEncryptor in the 
  org.jasypt.encryption.pbe package
- Added new org.jasypt.util.numeric package with easy utils for numeric 
  encryption.
- Refactored org.jasypt.hibernate classes into new "encryptor" and "type" 
  subpackages.
- Added HibernatePBEEncryptorRegistry support for BigInteger, BigDecimal and
  Byte encryptors
- Added Hibernate type for encryption of binaries (byte[]) into SQL BLOBs
- Added Hibernate type for encryption of BigIntegers into SQL NUMERICs.
- Added Hibernate type for encryption of BigDecimals into SQL NUMERICs.
- Added Hibernate type for encryption of Bytes into SQL VARCHARs.
- Added Hibernate type for encryption of Shorts into SQL VARCHARs.
- Added Hibernate type for encryption of Integers into SQL VARCHARs.
- Added Hibernate type for encryption of Longs into SQL VARCHARs.
- Added Hibernate type for encryption of Floats into SQL VARCHARs.
- Added Hibernate type for encryption of Doubles into SQL VARCHARs.
- Added Hibernate type for encryption of Booleans into SQL VARCHARs.
- Added Hibernate type for encryption of Dates into SQL VARCHARs.
- Added Hibernate type for encryption of Calendars into SQL VARCHARs.
  

1.1
=======

- Added org.jasypt.util.StrongPasswordEncryptor as a util class for
  easy password encryption using a stronger algorithm.
- Added org.jasypt.util.MessageDigester as a util class for
  creating simple binary message digests.
- Added org.jasypt.digest.config.EnvironmentDigesterConfig and
  org.jasypt.encryption.pbe.config.EnvironmentPBEConfig for configuration
  of encryptors and digesters using environment variables and system properties.
- Objects of class org.jasypt.util.PasswordEncryptor now initialize their
  internal StandardStringDigester at instance creation.
- Made org.jasypt.digest.config.DigesterConfig and 
  org.jasypt.encryption.pbe.config.PBEConfig extend java.io.Serializable

1.0
=======
- First release of jasypt