@@ -142,6 +142,13 @@
       <version>3.1</version>
       <optional>true</optional>
     </dependency>
+
+    <dependency>
+      <groupId>org.acegisecurity</groupId>
+      <artifactId>acegi-security</artifactId>
+      <version>1.0.0</version>
+      <optional>true</optional>
+    </dependency>
     
     <dependency>
       <groupId>junit</groupId>
