@@ -1,4 +1,0 @@
-
-1.1
-=======
-- First release of jasypt-spring-security
